--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,15 @@ body{
 /* header */
 .logo{
   height: 100px;
+  width: 156px;
   background-image: url(../img/logo.png);
   background-repeat: no-repeat;
   background-size: 150px;
+}
+
+.logo .v1 {
+  border-right: 1px solid rgb(206, 206, 206);
+  height: 70px;
 }
 
 nav{
@@ -42,6 +48,14 @@ nav li a{
   text-decoration: none;
 }
 
+
+.black{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.158);
+  border-radius: 10px;
+}
+
 .banner {
   height: 500px;
   margin-bottom: 20px;
@@ -50,6 +64,7 @@ nav li a{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-blend-mode: darken;
 }
 
 .pretium{
@@ -101,7 +116,7 @@ aside{
 .pianta, 
 .nerd, 
 .lampadina{
-  height: 200px;
+  height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -135,5 +150,5 @@ footer{
 
 .ics::after {
   content: "\2665";
-  color: red;
+  color: rgb(221, 2, 2);
 }
